# zero-cost-templating

./: .gitignore  Cargo.toml  DESIGN.md  README.md  clippy.toml  foo.dot  partial_block.dot  partial_block_partial.dot  rustfmt.toml  template_graph.dot  test2.dot
.cargo/: config.toml
zero-cost-templating/: Cargo.toml  f_each_one_variable.html.hbs  f_each_two_variables.html.hbs  foo.dot  g_empty_template_multiple.html.hbs  g_only_template.html.hbs  g_partial_block_partial.html.hbs  g_template_only_partial_block.html.hbs  g_template_only_partial_block_with_text_multiple.html.hbs  g_template_only_partial_block_with_variable.html.hbs  if_else,partial_block_partial,partial_block,test.dot  if_else,partial_block_partial,test.dot  if_else,test.dot  if_else.dot  if_else.html.dot  only_template,partial_block_partial.dot  only_template.html.hbs  partial_block.dot  partial_block.html.dot  partial_block.html.hbs  partial_block_partial.html.dot  partial_block_partial.html.hbs  template_graph.dot  test,partial_block,partial_block_partial.dot  test,partial_block_partial.dot  test.dot  test.html.dot  test.html.hbs  test2.dot  test2.html.hbs
zero-cost-templating-lib/: Cargo.toml
zero-cost-templating-lib/src/: codegen.rs  html_recursive_descent.rs  intermediate_graph.rs  lib.rs
zero-cost-templating-macros/: Cargo.toml
zero-cost-templating-macros/src/: lib.rs
zero-cost-templating/benches/: my_benchmark.rs  my_benchmark.rs.txt
zero-cost-templating/src/: async_iterator_extension.rs  future_to_stream.rs  lib.rs
zero-cost-templating/templates/: c_element_with_attribute.html.hbs  d_element_with_attribute_and_variables.html.hbs  e_if_else.html.hbs  e_if_else_empty.html.hbs  e_if_else_empty_false.html.hbs  e_if_else_empty_true.html.hbs  e_if_else_with_variables.html.hbs  f_each_empty.html.hbs  f_each_one_variable.html.hbs  f_each_two_variables.html copy.hbs  f_each_two_variables.html.hbs  g_empty_template.html.hbs  g_empty_template_multiple.html.hbs  g_only_partial_block.html.hbs  g_partial_block.html.hbs  g_partial_block_partial.html.hbs  g_template_only_partial_block_multiple.html.hbs  g_template_only_partial_block_with_text.html.hbs  g_template_only_partial_block_with_text_multiple.html.hbs  g_template_only_partial_block_with_variable.html.hbs  g_template_only_partial_block_with_variable_multiple.html.hbs
zero-cost-templating/tests/: if_else.rs
zero-cost-templating/tests/ui/compile_fail/: initial_macro_unexpected_parameter.rs  initial_macro_unexpected_parameter.stderr  initial_unexpected_parameter.rs  initial_unexpected_parameter.stderr  mismatched_types_unit.rs  mismatched_types_unit.stderr  missing_variable_value.rs  missing_variable_value.stderr  moved_value.rs  moved_value.stderr  must_use.rs  must_use.stderr  template_macro_missing_parameter.rs  template_macro_missing_parameter.stderr  type_mismatch_because_missing_call.rs  type_mismatch_because_missing_call.stderr  variable_macro_missing_first_parameter.rs  variable_macro_missing_first_parameter.stderr  variable_macro_missing_parameters.rs  variable_macro_missing_parameters.stderr  variable_macro_missing_second_parameter.rs  variable_macro_missing_second_parameter.stderr  wrong_type.rs  wrong_type.stderr
zero-cost-templating/tests/ui/compile_fail_expand/: mismatched_types_unit.rs  mismatched_types_unit.stderr  moved_value.rs  moved_value.stderr  must_use.stderr  type_mismatch_because_missing_call.stderr  wrong_type.rs  wrong_type.stderr
zero-cost-templating/tests/ui/compile_fail_no_expand/: mismatched_types_unit.rs  mismatched_types_unit.stderr  must_use.rs  must_use.stderr  type_mismatch_because_missing_call.rs  type_mismatch_because_missing_call.stderr  wrong_type.stderr
zero-cost-templating/tests/ui/pass/: README.md  if_else.rs  only_template.rs  working_no_loop.rs
