[workspace]
resolver = "2"
members = ["zero-cost-templating-lib", "zero-cost-templating-macros", "zero-cost-templating"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.build-override]
debug = true

[profile.bench]
debug = true

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
struct_field_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }