[package]
name = "zero-cost-templating-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
futures = "0.3"
futures-async-stream = { git = "https://github.com/mohe2015/futures-async-stream.git" }
prettyplease = "0.2"
itertools = "0.12"
petgraph = "0.6"
heck = "0.4"