cargo-features = ["edition2024"]

[package]
name = "zero-cost-templating-macros"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mohe2015/zero-cost-templating"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
zero-cost-templating-lib = { path = "../zero-cost-templating-lib" }
syn = { git = "https://github.com/mohe2015/syn.git", branch = "gen", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
itertools = "0.12"
petgraph = "0.6"
