cargo-features = ["edition2024"]

[package]
name = "zero-cost-templating"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero-cost-templating-macros = { path = "../zero-cost-templating-macros" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
pin-project = "1"
regex = "1"

[dev-dependencies]
trybuild = { git = "https://github.com/mohe2015/trybuild.git", branch = "edition-2024" }
iai-callgrind = "0.8"

#[[bench]]
#name = "my_benchmark"
#harness = false

[[bin]]
name = "initial_unexpected_parameter"
path = "tests/ui/compile_fail/initial_unexpected_parameter.rs"

[[bin]]
name = "mismatched_types_unit"
path = "tests/ui/compile_fail/mismatched_types_unit.rs"

[[bin]]
name = "missing_variable_value"
path = "tests/ui/compile_fail/missing_variable_value.rs"

[[bin]]
name = "moved_value"
path = "tests/ui/compile_fail/moved_value.rs"

[[bin]]
name = "must_use"
path = "tests/ui/compile_fail/must_use.rs"

[[bin]]
name = "type_mismatch_because_missing_call"
path = "tests/ui/compile_fail/type_mismatch_because_missing_call.rs"

[[bin]]
name = "wrong_type"
path = "tests/ui/compile_fail/wrong_type.rs"

[[bin]]
name = "if_else"
path = "tests/ui/pass/if_else.rs"

[[bin]]
name = "only_template"
path = "tests/ui/pass/only_template.rs"

[[bin]]
name = "working_no_loop"
path = "tests/ui/pass/working_no_loop.rs"
